# Instruct CMake to run moc and rrc automatically when needed.
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

#add_subdirectory(application)
add_subdirectory(cache)
add_subdirectory(complexitem)
add_subdirectory(item)
add_subdirectory(itemsmodel)
add_subdirectory(keystore)
#add_subdirectory(locallibraryfactory)
add_subdirectory(synchronizer)
add_subdirectory(todolist)
add_subdirectory(webdavsynchronizer)
add_subdirectory(image)
add_subdirectory(itemcontainer)
add_subdirectory(jsonutils)
add_subdirectory(library)
add_subdirectory(note)
add_subdirectory(task)
add_subdirectory(todo)
add_subdirectory(toplevelitem)
