# Instruct CMake to run moc and rrc automatically when needed.
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

add_subdirectory(cache)
add_subdirectory(complexitem)
add_subdirectory(item)
add_subdirectory(itemsmodel)
add_subdirectory(keystore)
add_subdirectory(synchronizer)
add_subdirectory(todolist)
add_subdirectory(webdavsynchronizer)
add_subdirectory(image)
add_subdirectory(jsonutils)
add_subdirectory(library)
add_subdirectory(note)
add_subdirectory(task)
add_subdirectory(todo)
add_subdirectory(toplevelitem)
add_subdirectory(insertorupdateitemsquery)
add_subdirectory(librariesitemsquery)
add_subdirectory(getitemsquery)
add_subdirectory(getlibraryitemsuidsitemsquery)
add_subdirectory(deleteitemsquery)
add_subdirectory(librariesmodel)
add_subdirectory(getitemquery)
add_subdirectory(getlibraryquery)
add_subdirectory(notepage)
add_subdirectory(movetodoquery)
add_subdirectory(promotetaskquery)
add_subdirectory(copyitemquery)
add_subdirectory(nextcloudaccount)
add_subdirectory(owncloudaccount)
add_subdirectory(webdavaccount)
add_subdirectory(updateitemquery)
